@@ -17,8 +17,6 @@ JAVA_OPTIONS="-server \
   -Dio.netty.buffer.checkAccessible=false \
   -Djava.util.logging.manager=org.jboss.logmanager.LogManager \
   -Dquarkus.http.idle-timeout=0 \
-  -XX:-UseBiasedLocking \
-  -XX:+UseStringDeduplication \
   -XX:+UseNUMA \
   -XX:+UseParallelGC \
   -Djava.lang.Integer.IntegerCache.high=10000 \
